--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,5 @@
 .env
 
 ### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+/.vscode
 
